# PythonProjectTemplate

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  GenerateDoc.bat  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  build_docs.sh  codecov.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci-testing.yml  ci.yml  codecov.yml  codeql-analysis.yml  documentation.yml  publish.yml  test.yml
api/: index.html
app/: main.py
benchmarks/: test_benchmark_computations.py  test_clipping.py  test_computations.py
docs/: api.md  build_docs.bat  build_docs.sh  index.md  make.sh
docs/source/: conf.py  fastvector.rst  index.rst  modules.rst
documentation/: build_docs.bat  build_docs.sh  make.sh
examples/: main.py
fastvector/: __init__.py  computations.py  cython_computations.c  cython_computations.pyx  dtypes.py  vector.py  version.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_computations.py  test_vector.py
